crates/scene/tests/snapshots/composition__keybind_last_wins_ok@keybind_last_wins.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:

keybinds:
  - chord: Alt p  intent: child.picker
  - chord: Ctrl s  intent: base.save

plugins:

layout tabs:
