crates/scene/tests/snapshots/composition__plugin_override_wins_ok@plugin_override_wins.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:

keybinds:

plugins:
  - name: status  mount: floating  source: shipped:status  override: true

layout tabs:
