crates/scene/tests/snapshots/composition__reactions_append_in_load_order_ok@reactions_append_in_load_order.snap
---
source: crates/scene/tests/composition.rs
expression: rendered
---
name: child

reactions:
  - selector: AgentReady  if: -
  - selector: Stall  if: -
  - selector: UserEvent:child.ready  if: -

keybinds:

plugins:

layout tabs:
